# chronos

./: Cargo.toml  README.md
frontend/: index.html
frontend/scripts/: app.js  border.js
frontend/styles/: styles.css
icons/: Untitled design.icns
installers/: PKGBUILD  chronos  chronos.d  chronos_1.0.1_amd64.deb  chronos_2.0.0_amd64.deb  chronos_2.0.0_x86_64.AppImage
installers/linux/: PKGBUILD  chronos  chronos.d  chronos_3.2.0_amd64.deb  chronos_3.2.0_x86_64.AppImage
src/: chronos.rs  day.rs  main.rs  tracker.rs  tracker_event.rs  tracker_session.rs
