[package]
name = "chronos"
version = "1.0.1"
edition = "2024"

[dependencies]
# for the tui
ratatui = "0.30.2"
color-eyre = "0.6.5"
crossterm = "0.29.0"

# for chronos
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"]}
tokio = { version = "1", features = ["full"]}

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[package.metadata.packager]
product_name = "Chronos"
formats = ["all"]

binaries = [
    { path = "chronos", main = true}
]

before_packaging_command = "cargo build --release"