[package]
name = "chronos"
version = "2.0.0"
edition = "2024"

[dependencies]
# for the tui
ratatui = "0.30.2"
color-eyre = "0.6.5"
crossterm = "0.29.0"
chrono = "0.4"

# for chronos
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"]}
tokio = { version = "1", features = ["full"]}
axum = "0.8.9"
features = "0.10.0"
full = "0.3.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tower-http = { version = "0.7.0", features = ["fs", "cors"]}
rust-embed = "8"
mime_guess = "2"
open = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[package.metadata.packager]
product_name = "Chronos"
formats = ["all"]

icons = ["icons/*.png", "icons/*.ico", "icons/*.icns"]

binaries = [
    { path = "chronos", main = true}
]

before_packaging_command = "cargo build --release"
